--- a/css/responsive/responsive.css
+++ b/css/responsive/responsive.css
@@ -131,6 +131,7 @@
     }
     .contact-form-area {
         padding: 50px 20px;
+        margin-top: 100px;
     }
     .single-contact-info:first-child {
         margin-right: 0;
@@ -297,6 +298,7 @@
     }
     .contact-form-area {
         padding: 50px 15px;
+        margin-top: 50px;
     }
     .dorne-map-area {
         height: 500px;
