--- a/style.css
+++ b/style.css
@@ -460,7 +460,7 @@ li {
 }
 
 .sticky .header_area {
-    background-color: rgba(14, 2, 35, 0.9);
+    background-color: #ed1a25;
     height: 80px;
     z-index: 9999;
     border-bottom: 1px solid transparent;
@@ -482,7 +482,7 @@ li {
 
 .navbar-brand:hover,
 .navbar-brand:focus {
-    color: #fff;
+    color: #fc0000;
     font-weight: 700;
 }
 
@@ -1647,4 +1647,6 @@ li {
   button[type="submit"]:hover {
     background-color: #0056b3;
   }
+  
+
   
