--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,4 @@
-/* .section {
+.section {
     position: relative;
     height: 100vh
 }
@@ -140,4 +140,4 @@
     font-size: 16px;
     font-weight: 400;
     color: #fff
-} */
+}
