--- a/layouts/styles/animated.css
+++ b/layouts/styles/animated.css
@@ -1,72 +1,23 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-}
-:root{
-    --color-primary:#f8f8fc;
-    --color-bg:#1b1b42;
-    --color-bg2:#ffffff;
-    --color-white:#ffffff;
-    --color-light:#f5f5f5;
-    --transition: .4s ease;
-}
-
-
-h1{
-    font-size: 60px;
-    color: var(--color-white);
-}
-
-/*..................Start Navbar...................*/
-@media(max-width:500px){
-  .nav-links{
-    gap: 25px;
-    display: none;
-  }
-  .logo {
-    height: 40px;
-    width: 40px;
-    border-radius: 50px;
-}
-.dropdown{
-  visibility: visible;
-  height: 20px;
-  width: 20px;
-  margin-top: 30px;
-  cursor: pointer;
-  position: relative;
-  display: block;
-}
-}
-.navbar-toggler-icon {
-  display: inline-block;
-  width: 1.5em;
-  height: 1.5em;
-  vertical-align: middle;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 100%;
-}
-
-/*..................End Navbar...................*/
-/*..................Start Header................*/
 .wavy span {
-    position: relative;
-    display: inline-block;
-    color: #fa3909;
-    text-transform: uppercase;
-    animation: wavy 1s infinite;
-    animation-delay: calc(.1s * var(--i));
-    
+  position: relative;
+  display: inline-block;
+  color: #fa3909;
+  text-transform: uppercase;
+  font-family: 'Arial Black', 'Arial Bold', Gadget, sans-serif; 
+  animation: wavy 1s infinite;
+  animation-delay: calc(.1s * var(--i));
+  text-shadow: 0 3px #4361ee, 0 5px #fc2515, 0 7px #4361ee;
+}
+
+@keyframes wavy {
+  0%, 40%, 100% {
+      transform: translateY(0);
   }
-  @keyframes wavy {
-    0%,40%,100% {
-      transform: translateY(0)
-    }
-    20% {
-      transform: translateY(-20px)
-    }
+  20% {
+      transform: translateY(-20px);
   }
-  
+}
+.Y{
+  animation: bounce 1s ease infinite;
+  -webkit-animation: bounce 1s ease infinite;
+}
