--- a/style.css
+++ b/style.css
@@ -97,3 +97,81 @@
 body{
   font-family: Urbanist;
 }
+.image-container-wrapper {
+  overflow: hidden;
+  width: 100%;
+  position: relative;
+}
+
+.image-container1 {
+  display: flex;
+  animation: scroll 20s linear infinite;
+}
+
+.image-card {
+  flex: 0 0 auto;
+  width: 150px;
+  margin: 0 10px;
+  background-color: white;
+  /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
+  border-radius: 8px;
+}
+
+.image-card img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px 8px 0 0;
+}
+
+@keyframes scroll {
+  0% {
+      transform: translateX(0);
+  }
+  100% {
+      transform: translateX(-50%);
+  }
+}
+.card-img-circle {
+  width: 80px; 
+  height: 80px; 
+  border-radius: 50%; 
+  object-fit: cover; 
+  margin-top: -40px; 
+  margin-left: auto; 
+  margin-right: auto; 
+  display: block; 
+  border: 3px solid white;
+}
+.card-body {
+  padding-top: 20px; /* Adjust to fit image properly */
+}
+.card {
+  margin-top: 30px; /* Optional: Adjust to add space above card */
+}
+.small-link {
+  font-size: 12px; /* Adjust the size as needed */
+}
+.footer {
+  background-color: #001524;
+  color: #ffffff;
+  padding: 10px 0;
+}
+
+.textdec {
+  text-decoration: none;
+}
+
+.horizantal-line {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  margin-top: 10px; /* Adjust as needed */
+}
+
+.footer p {
+  text-align: center;
+  margin-top: 10px; /* Adjust as needed */
+  font-size: 14px; /* Adjust as needed */
+}
