--- a/style.css
+++ b/style.css
@@ -179,6 +179,9 @@ body{
 /* hero section search start */
     
 
+/* Custom styles */
+      
+  
 .form-group-label {
   font-weight: bold;
 }
@@ -197,21 +200,21 @@ body{
 }
 #location{
     height: 50px;
-    margin-top: 10px;
+    margin-top: 20px;
 
 }
 #dates{
     height: 50px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #guests{
     height: 50px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #search{
     height: 50px;
     width: 150px;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #move{
    
