--- a/details-page/sign-in.css
+++ b/details-page/sign-in.css
@@ -121,3 +121,27 @@ body {
   padding-bottom: 5px;
 
 }
+.footer {
+  background-color: #001524;
+  color: #ffffff;
+  padding: 10px 0;
+}
+
+.textdec {
+  text-decoration: none;
+}
+
+.horizantal-line {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  margin-top: 10px; /* Adjust as needed */
+}
+
+.footer p {
+  text-align: center;
+  margin-top: 10px; /* Adjust as needed */
+  font-size: 14px; /* Adjust as needed */
+}
