--- a/details-page/sign-in.css
+++ b/details-page/sign-in.css
@@ -145,3 +145,13 @@ body {
   margin-top: 10px; /* Adjust as needed */
   font-size: 14px; /* Adjust as needed */
 }
+.right {
+  height: 50px;
+  width: 50px;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  margin-top: 10px; /* to add space between rows */
+}
