--- a/assets/index-asset/style.css
+++ b/assets/index-asset/style.css
@@ -216,7 +216,13 @@ body{
     width: 150px;
     margin-top: 20px;
 }
-#move{
-   
-}
+/* CSS for screens wider than 768px */
+/* @media (max-width: 768px) {
+  #move1{
+    margin-top: -250px;
+  }
+  
+} */
+
+
 /* hero section search end */
