--- a/details-page/sign-in.css
+++ b/details-page/sign-in.css
@@ -155,3 +155,27 @@ body {
   color: white;
   margin-top: 10px; /* to add space between rows */
 }
+.filter-checkbox-colour{
+  /* background-color: red; */
+  border-color: red;
+}
+
+/* navbar scroll code  */
+
+div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #f50e0e;
+}
