--- a/single-hotel-page/sign-in.css
+++ b/single-hotel-page/sign-in.css
@@ -207,3 +207,47 @@ div.scrollmenu a {
 div.scrollmenu a:hover {
   background-color: #f50e0e;
 }
+.centered-hr {
+  width: 80%;
+  margin: 0 auto;
+  color: #ff1717;
+  height: 10px;
+
+}
+.range-input {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 8px;
+  background: red;
+  outline: none;
+  opacity: 0.7;
+  transition: opacity .2s;
+}
+
+.range-input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 25px;
+  height: 25px;
+  background: red;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.range-input::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: red;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.slider-container {
+  display: flex;
+  align-items: center;
+}
+
+.slider-value {
+  margin-left: 10px;
+  font-weight: bold;
+}
