--- a/single-hotel-page/sign-in.css
+++ b/single-hotel-page/sign-in.css
@@ -258,3 +258,55 @@ div.scrollmenu a:hover {
   padding: 2px 8px;
   margin-top: 5px;
 }
+
+
+/* nearby properties start */
+#hotel{
+  border-radius: 4px;
+background: #FFF;
+box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.25);
+
+}
+#towers{
+  color: #FF1717;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.room{
+  color: #000;
+font-family: Inter;
+font-size: 12px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;  
+}
+#discount{
+  color: rgba(0, 0, 0, 0.50);
+font-family: Inter;
+font-size: 12px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+}
+#discount1{
+  color: #000;
+font-family: Inter;
+font-size: 16px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+}
+#book{
+  display: inline-flex;
+padding: 8px 24px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 4px;
+background: #FF1717;
+border: none;
+}
+/* nearby properties start */
