--- a/reservation page/sign-in.css
+++ b/reservation page/sign-in.css
@@ -384,3 +384,17 @@ border: none;
   border: 2px dotted red;
 }
 /* coupen radio button red color end */
+/* last section available soon start  */
+@media (min-width: 600px) {
+  .available-soon-sticker{
+     height: 25px;
+     width: 160px;
+  }
+}
+@media (min-width: 900px) {
+  .available-soon-sticker{
+     height: 25px;
+     width: 160px;
+  }
+}
+/* last section available soon end  */
