--- a/includes/header.html
+++ b/includes/header.html
@@ -1,28 +1,18 @@
-
-  
-
-  
   <!-- Second navigation bar: centered content -->
   <div class="scrollmenu text-center" style="background-color:#FF1717;">
     <a href="#home"><button type="button" class="btn text-light border rounded-pill active">
         <i class="fa-solid fa-bed p-2"></i>Stays
       </button></a>
     <a href="#news"><button type="button" class="btn text-light rounded-pill">
-        <i class="fa-solid fa-bus p-2"></i> Bus
+        <i class="fa-solid fa-bus p-2"></i> Tours & Travels
       </button></a>
     <a href="#contact"><button type="button" class="btn text-light rounded-pill">
-        <i class="fa-solid fa-earth-europe p-2"></i> Flight+Hotel
+      <i class="fa-solid fa-utensils"></i> Hotel
       </button></a>
     <a href="#about"><button type="button" class="btn text-light rounded-pill">
-        <i class="fa-solid fa-car p-2"></i> Car Rental
+      <i class="fa-solid fa-tag"></i> View Cart
       </button></a>
     <a href="#about"><button type="button" class="btn text-light rounded-pill">
-        <i class="fa-solid fa-blog p-2"></i> Blogs
-      </button></a>
-    <a href="#about"><button type="button" class="btn text-light rounded-pill">
-        <i class="fa-solid fa-blog p-2"></i> View Cart
-      </button></a>
-    <a href="#about"><button type="button" class="btn text-light rounded-pill">
-        <i class="fa-solid fa-blog p-2"></i> About Us
+      <i class="fa-solid fa-question"></i> About Us
       </button></a>
   </div>
