--- a/assets/index-asset/style.css
+++ b/assets/index-asset/style.css
@@ -223,3 +223,20 @@ body{
 }
 
 /* hero section search end */
+div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #f50e0e;
+}
