--- a/includes/aboutusheader.html
+++ b/includes/aboutusheader.html
@@ -1,6 +1,6 @@
   <!-- Second navigation bar: centered content -->
   <div class="scrollmenu text-center" style="background-color:#FF1717;">
-    <a href="../index.html"><button type="button" class="btn text-light border rounded-pill active">
+    <a href="../index.html"><button type="button" class="btn text-light rounded-pill">
         <i class="fa-solid fa-bed p-2"></i>Stays
       </button></a>
     <a href="#news"><button type="button" class="btn text-light rounded-pill">
@@ -12,7 +12,7 @@
     <a href="#about"><button type="button" class="btn text-light rounded-pill">
       <i class="fa-solid fa-tag"></i> View Cart
       </button></a>
-    <a href="../aboutus.html"><button type="button" class="btn text-light rounded-pill">
+    <a href="../aboutus.html"><button type="button" class="btn text-light rounded-pill active">
       <i class="fa-solid fa-question"></i> About Us
       </button></a>
   </div>
