--- a/includes/header.html
+++ b/includes/header.html
@@ -3,13 +3,13 @@
     <a href="index.html"><button type="button" class="btn text-light border rounded-pill active">
         <i class="fa-solid fa-bed p-2"></i>Stays
       </button></a>
-    <a href="#news"><button type="button" class="btn text-light rounded-pill">
+    <a href="index.html"><button type="button" class="btn text-light rounded-pill">
         <i class="fa-solid fa-bus p-2"></i> Tours & Travels
       </button></a>
-    <a href="#contact"><button type="button" class="btn text-light rounded-pill">
+    <a href="index.html"><button type="button" class="btn text-light rounded-pill">
       <i class="fa-solid fa-utensils"></i> Hotel
       </button></a>
-    <a href="#about"><button type="button" class="btn text-light rounded-pill">
+    <a href="index.html"><button type="button" class="btn text-light rounded-pill">
       <i class="fa-solid fa-tag"></i> View Cart
       </button></a>
     <a href="aboutus.html"><button type="button" class="btn text-light rounded-pill">
