--- a/confirmationpage/confirmation.css
+++ b/confirmationpage/confirmation.css
@@ -43,3 +43,21 @@ line-height: normal;
 background: #FF1717;
 }
 
+
+  div.scrollmenu {
+  background-color: #333;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+div.scrollmenu a {
+  display: inline-block;
+  color: white;
+  text-align: center;
+  padding: 14px;
+  text-decoration: none;
+}
+
+div.scrollmenu a:hover {
+  background-color: #f50e0e;
+}
