--- a/assets/index-asset/style.css
+++ b/assets/index-asset/style.css
@@ -240,3 +240,36 @@ div.scrollmenu a {
 div.scrollmenu a:hover {
   background-color: #f50e0e;
 }
+
+/* style for suggetion box start */
+.suggestion-box {
+  position: absolute;
+  background-color: #333; /* Dark background for the suggestion box */
+  z-index: 1000;
+  width: 100%;
+  color: white; /* Set text color to white */
+}
+.suggestion-item {
+  padding: 8px;
+  cursor: pointer; /* Change cursor to pointer */
+}
+.suggestion-item:hover {
+  background-color: #555; /* Darker background on hover */
+}
+/* style for suggetion box end */
+
+
+/* child age css start */
+.child-age-dropdown {
+  flex: 1 1 100px; /* Adjust the width as needed */
+}
+
+.child-age-dropdown label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.is-invalid {
+  border-color: #dc3545;
+}
+/* child age css end */
