--- a/admin/Login/css/style.css
+++ b/admin/Login/css/style.css
@@ -1,13 +1,13 @@
 /* Google Fonts - Poppins */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-.container{
+.container {
     height: 100vh;
     width: 100%;
     display: flex;
@@ -16,7 +16,7 @@
     background-color: #ff0000;
     column-gap: 30px;
 }
-.form{
+.form {
     position: absolute;
     max-width: 430px;
     width: 100%;
@@ -24,28 +24,28 @@
     border-radius: 6px;
     background: #FFF;
 }
-.form.signup{
+.form.signup {
     opacity: 0;
     pointer-events: none;
 }
-.forms.show-signup .form.signup{
+.forms.show-signup .form.signup {
     opacity: 1;
     pointer-events: auto;
 }
-.forms.show-signup .form.login{
+.forms.show-signup .form.login {
     opacity: 0;
     pointer-events: none;
 }
-header{
+header {
     font-size: 28px;
     font-weight: 600;
     color: #232836;
     text-align: center;
 }
-form{
+form {
     margin-top: 30px;
 }
-.form .field{
+.form .field {
     position: relative;
     height: 50px;
     width: 100%;
@@ -53,7 +53,8 @@ form{
     border-radius: 6px;
 }
 .field input,
-.field button{
+.field button,
+.field select {
     height: 100%;
     width: 100%;
     border: none;
@@ -61,15 +62,17 @@ form{
     font-weight: 400;
     border-radius: 6px;
 }
-.field input{
+.field input,
+.field select {
     outline: none;
     padding: 0 15px;
-    border: 1px solid#CACACA;
+    border: 1px solid #CACACA;
 }
-.field input:focus{
+.field input:focus,
+.field select:focus {
     border-bottom-width: 2px;
 }
-.eye-icon{
+.eye-icon {
     position: absolute;
     top: 50%;
     right: 10px;
@@ -79,40 +82,40 @@ form{
     cursor: pointer;
     padding: 5px;
 }
-.field button{
+.field button {
     color: #fff;
     background-color: #ff0000;
     transition: all 0.3s ease;
     cursor: pointer;
 }
-.field button:hover{
-    background-color:#eb0404;
+.field button:hover {
+    background-color: #eb0404;
 }
-.form-link{
+.form-link {
     text-align: center;
     margin-top: 10px;
 }
 .form-link span,
-.form-link a{
+.form-link a {
     font-size: 14px;
     font-weight: 400;
     color: #232836;
 }
-.form a{
+.form a {
     color: #0171d3;
     text-decoration: none;
 }
-.form-content a:hover{
+.form-content a:hover {
     text-decoration: underline;
 }
-.line{
+.line {
     position: relative;
     height: 1px;
     width: 100%;
     margin: 36px 0;
     background-color: #d4d4d4;
 }
-.line::before{
+.line::before {
     content: 'Or';
     position: absolute;
     top: 50%;
@@ -122,16 +125,16 @@ form{
     color: #8b8b8b;
     padding: 0 15px;
 }
-.media-options a{
+.media-options a {
     display: flex;
     align-items: center;
     justify-content: center;
 }
-a.facebook{
+a.facebook {
     color: #fff;
     background-color: #4267b2;
 }
-a.facebook .facebook-icon{
+a.facebook .facebook-icon {
     height: 28px;
     width: 28px;
     color: #0171d3;
@@ -143,29 +146,76 @@ a.facebook .facebook-icon{
     background-color: #fff;
 }
 .facebook-icon,
-img.google-img{
+img.google-img {
     position: absolute;
     top: 50%;
     left: 15px;
     transform: translateY(-50%);
 }
-img.google-img{
+img.google-img {
     height: 20px;
     width: 20px;
     object-fit: cover;
 }
-a.google{
+a.google {
     border: 1px solid #CACACA;
 }
-a.google span{
+a.google span {
     font-weight: 500;
     opacity: 0.6;
     color: #232836;
 }
 
 @media screen and (max-width: 400px) {
-    .form{
+    .form {
         padding: 20px 10px;
     }
-    
+}
+/* // some test content // */
+.form .fieldd {
+    position: relative;
+    height: 50px;
+    width: 100%;
+    margin-top: 20px;
+    border-radius: 6px;
+}
+.fieldd input,
+.fieldd button,
+.fieldd select {
+    height: 100%;
+    width: 100%;
+    border: none;
+    font-size: 16px;
+    font-weight: 400;
+    border-radius: 6px;
+}
+.fieldd input,
+.fieldd select {
+    outline: none;
+    padding: 0 15px;
+    border: 1px solid #CACACA;
+}
+.fieldd input:focus,
+.fieldd select:focus {
+    border-bottom-width: 2px;
+}
+.eye-icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    font-size: 18px;
+    color: #8b8b8b;
+    cursor: pointer;
+    padding: 5px;
+}
+.fieldd button {
+    color: #000000;
+    background-color: #d3d3d3;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    border-color: #000000;
+}
+.fieldd button:hover {
+    background-color: #c7c7c7;
 }
