--- a/admin-frontend/src/styles/auth.css
+++ b/admin-frontend/src/styles/auth.css
@@ -6,7 +6,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-.container {
+.containerr {
     height: 100vh;
     width: 100%;
     display: flex;
